bpo-31440: Changed default module search path for windows